--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,9 @@ categories = ["multimedia::audio", "embedded"]
 repository = "https://github.com/10buttons/awedio"
 
 [features]
-default = ["cpal", "async", "mp3", "wav"]
+default = ["cpal", "async", "mp3", "wav", "qoa"]
 mp3 = ["dep:rmp3"]
+qoa = ["dep:qoaudio"]
 wav = ["dep:hound"]
 async = ["dep:tokio"]
 cpal = ["dep:cpal"]
@@ -21,3 +22,4 @@ tokio = { version = "1.26.0", features = ["sync"], optional = true }
 hound = { version = "3.5.0", optional = true }
 rmp3 = { version = "0.3.1", features = ["std"], optional = true }
 cpal = { version = "0.14.2", optional = true }
+qoaudio = { version = "0.6", optional = true }
