--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,3 +41,4 @@ rmp3 = { version = "0.3.1", features = ["std"], optional = true }
 cpal = { version = "0.14.2", optional = true }
 qoaudio = { version = "0.6", optional = true }
 symphonia = { version = "0.5.3", optional = true, default-features = false }
+log = "0.4.20"
